Added implementation for fluid textures and bucket generation (#1118)
* Testing phase

* Added working fluid texture loader

* Save checkpoint

* Working version of the bucket model generator

---------

Co-authored-by: Lexxie Raven Black <30494658+ladylexxie@users.noreply.github.com>